package com.alognquin.cst8288.fall24.assignment1;

public class Constants {

	public static final long ACUTE_DURATION = 7;
	public static final long INFECTION_DURATION = 30;
	public static final long CHRONIC_DURATION = 180;

	public static final String ACUTE = "Acute Disease";
	public static final String INFECTION = "Infection Disease";
	public static final String CHRONIC = "Chronic Disease";

	public static final String CHILD = "Children";
	public static final String YOUTH = "Youth";
	public static final String ADULT = "Adult";

	public static final String HIGH = "High";
	public static final String MEDIUM = "Medium";
	public static final String LOW = "Low";
}